# log_room_environment

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yaml
esp32-app/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
esp32-app/main/: CMakeLists.txt
esp32-app/main/src/: main.c  user_def.h
esp32-app/main/src/ble/: ble_task.c  ble_task.h
esp32-app/main/src/bme680/: bme680_task.c  bme680_task.h
esp32-app/main/src/lib/: bme680.c  bme680.h
esp32-app/main/src/mg812/: mg812_task.c  mg812_task.h
grafana/: raspi_zero_w.json  room_environment.json
raspi_zero_w/log-app/: .gitignore  exec.sh  log_room_env.service  main.py
seeed-xiao-esp32c3-app/: .gitignore  CMakeLists.txt
seeed-xiao-esp32c3-app/src/: env_data.c  env_data.h  main.c
seeed-xiao-esp32c3-app/src/bme680/: bme680_task.c  bme680_task.h
seeed-xiao-esp32c3-app/src/mh-z19c/: mh-z19c_task.c  mh-z19c_task.h
seeed-xiao-esp32c3-app/src/request/: request.c  request.h  request_config.h
seeed-xiao-esp32c3-app/src/usr/: user_tag.c  user_tag.h
seeed-xiao-esp32c3-app/src/wifi/: wifi.c  wifi.h
src/: main.rs  mh_z19c.rs  sensors.rs
